Fixing chrome overflow

--- a/assets/css/templatemo-breezed.css
+++ b/assets/css/templatemo-breezed.css
@@ -338,6 +338,15 @@ a.text-button-icon:hover i {
 
 }
 
+@media screen and (-webkit-min-device-pixel-ratio:0)
+  and (min-resolution:.001dpcm) {
+    #demoVideo{
+      max-width:400px;
+      border: 2px solid red;
+
+    }
+}
+
 .modal-body{
   width:100% !important;
   overflow-y: auto;
